Bug 442109 - 21.04.3: Tab completion broken
Summary: 21.04.3: Tab completion broken
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: inputline (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-07 05:33 UTC by Luke-Jr
Modified: 2021-12-18 23:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.8.21121
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luke-Jr 2021-09-07 05:33:08 UTC
After upgrading to 21.04.3, tab completion only works for a single nick in the channel.

Downgrading back to 20.12.3 restores it working.
Comment 1 Luke-Jr 2021-12-17 04:52:46 UTC
Bug remains in 21.08.3...
Comment 2 Luke-Jr 2021-12-18 21:41:40 UTC
Looks like the "case sensitive" option is backward
Comment 3 Bug Janitor Service 2021-12-18 21:43:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konversation/-/merge_requests/66
Comment 4 Bug Janitor Service 2021-12-18 21:50:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konversation/-/merge_requests/67
Comment 5 Heiko Becker 2021-12-18 23:07:22 UTC
Git commit 68d4efb0e9dbcf1fa22c7975d92164a2f991256b by Heiko Becker, on behalf of Luke Dashjr.
Committed on 18/12/2021 at 22:11.
Pushed by kossebau into branch 'release/21.12'.

Bugfix: Correct behaviour of "case sensitive" tab completion option

Fixes regression from 5dfb6583.

M  +1    -1    src/irc/channel.cpp

https://invent.kde.org/network/konversation/commit/68d4efb0e9dbcf1fa22c7975d92164a2f991256b