Bugfix: Correct behaviour of "case sensitive" tab completion option

Fixes regression from 5dfb6583.
BUG:442109